Bug 1297879 - Don't allow the cocoa GL context to be opaque if we vibrant regions within the window. r=mstange